# event-driven-audio-analytics

./: .dockerignore  .env.example  .gitattributes  .gitignore  AGENTS.md  ARCHITECTURE_CONTRACTS.md  IMPLEMENTATION_RECONSTRUCTION.md  IMPLEMENTATION_STATUS.md  PROJECT_CONTEXT.md  README.md  REUSE_MAP.md  TASK_BOARD.md  correctness-against-reference.md  docker-compose.yml  event-contracts.md  index (1).html  index.html  pyproject.toml  pytest.cmd  run-demo-live.ps1  run-demo-replay.ps1  run-demo.ps1  run-demo.sh
.gsd.migrating/: CODEBASE.md  DECISIONS.md  REQUIREMENTS.md  STATE.md  doctor-history.jsonl  event-log.jsonl  gsd.db  gsd.db-shm  gsd.db-wal  metrics.json  notifications.jsonl  state-manifest.json
.gsd.migrating/activity/: 001-execute-task-M001-S01-T01.jsonl  001-execute-task-M001-S01-T02.jsonl  002-execute-task-M001-S01-T01.jsonl
.gsd.migrating/audit/: events.jsonl
.gsd.migrating/exec/: 14f65ae4-c43e-4493-94f0-9f345f2c5412.meta.json  14f65ae4-c43e-4493-94f0-9f345f2c5412.stderr  16a85e70-0e32-4d6f-9940-18963c63fb35.meta.json  16a85e70-0e32-4d6f-9940-18963c63fb35.stderr  2b32c681-6c4a-4a85-a9b6-e3a2f19e4c94.meta.json  2b32c681-6c4a-4a85-a9b6-e3a2f19e4c94.stderr  5cf8eb21-45c7-4c8d-a40f-3b9347ccf52f.meta.json  636ba0f4-b462-4fd3-93e4-61f348b14c4e.meta.json  636ba0f4-b462-4fd3-93e4-61f348b14c4e.stdout  65e9791a-190b-4c07-b142-d2e65b1fb5a1.meta.json  65e9791a-190b-4c07-b142-d2e65b1fb5a1.stdout  8f4ae683-60ed-4ff2-a8a9-73bc54584ba4.meta.json  8f4ae683-60ed-4ff2-a8a9-73bc54584ba4.stderr  9303c625-59d8-4e5b-b0fa-d09c4f62b70b.meta.json  9303c625-59d8-4e5b-b0fa-d09c4f62b70b.stdout  964bf0ea-7d77-4f3e-ba2a-f2d36a9abd20.meta.json  b3415e2d-5b61-49fa-a081-eb92a1d90c5e.meta.json  b3415e2d-5b61-49fa-a081-eb92a1d90c5e.stderr  c94c6b89-b964-4320-96db-604c0e7a903a.meta.json
.gsd.migrating/journal/: 2026-05-23.jsonl  2026-05-25.jsonl
.gsd.migrating/runtime/: uok-parity.jsonl  uok-plan-v2-graph.json  uok-writer-sequence.json
.gsd.migrating/safety/: evidence-M001-S01-T02.json
artifacts/: README.md  review-api-vietnamese-copy-smoke.json  review-console-smoke-after-cachebust.json
artifacts/report-figures/: README.md
data/: README.md
docs/: README.md  bao-cao-de-tai-event-driven-audio-analytics.md
references/: .gitkeep
schemas/: envelope.v1.json
tests/: __init__.py
(+361 files in other folders)
