[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "event-driven-audio-analytics"
version = "0.1.0"
description = "Scaffold for an event-driven audio analytics PoC on FMA-small."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
authors = [
  { name = "PTIT Event-Driven Audio Analytics Team" }
]
dependencies = [
  "av>=14.0.0",
  "confluent-kafka>=2.5.0",
  "numpy>=2.0.0",
  "polars>=1.0.0",
  "psycopg[binary]>=3.2.0",
  "PyYAML>=6.0.2",
  "torch>=2.10.0",
  "torchaudio>=2.10.0",
]

[project.optional-dependencies]
dev = [
  "jsonschema>=4.23.0",
  "pytest>=8.3.0",
  "ruff>=0.9.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
