[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "event-driven-audio-analytics"
version = "0.1.0"
description = "Event-driven audio analytics PoC on FMA-small."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
authors = [
  { name = "PTIT Event-Driven Audio Analytics Team" }
]
dependencies = [
  "confluent-kafka==2.5.0",
  "numpy==2.0.0",
  "PyYAML==6.0.2",
]

[project.optional-dependencies]
ingestion = [
  "av==14.0.0",
  "boto3==1.34.162",
  "polars==1.0.0",
]
processing = [
  "boto3==1.34.162",
  "torch==2.11.0",
  "torchaudio==2.11.0",
]
review = [
  "boto3==1.34.162",
  "fastapi==0.115.0",
  "uvicorn==0.30.0",
]
writer = [
  "psycopg[binary]==3.2.1",
  "psycopg-pool==3.2.1",
]
dataset-exporter = [
  "boto3==1.34.162",
  "polars==1.0.0",
  "psycopg[binary]==3.2.1",
]
dev = [
  "httpx==0.28.0",
  "jsonschema==4.23.0",
  "pytest==8.3.0",
  "ruff==0.9.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"event_driven_audio_analytics.review" = ["static/*"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
